--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -11,9 +11,9 @@
         <div class="about-us-container">
         
             <ol>
-                <li>John Doe - CEO</li>
-                <li>Jane Smith - CTO</li>
-                <li>Alice Johnson - COO</li>
+                <li>Manasa - CEO</li>
+                <li>Mrinalini - CTO</li>
+                <li>Pradyu - COO</li>
             </ol>
             
         </div>
